# rtty

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  compose.yml  docker-bake.hcl
.github/workflows/: build.yml
.github/workflows/HOLD/: build.yml
misc/: build-centos7  build-main  build-static
misc/alpine-3.21/: Dockerfile.build
misc/ubuntu-24.04/: Dockerfile  Dockerfile.builder  build_0
src/: command.c  config_var.h  main.c  rtty.c  rtty.h
src/ssl/: openssl.c
